--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 </head>
 <body>
   <header class="header">
-    <button class="burger">
-      <span class="burger__line"></span>
-    </button>
+    <button class="burger"></button>
     <nav class="header__navigation navigation">
       <button class="navigation__close"></button>
       <ul class="navigation__list">
         <li class="navigation__item">
-          <a class="navigation__link">Главная</a>
+          <a class="navigation__link navigation__link_active">Главная</a>
         </li>
         <li class="navigation__item">
           <a class="navigation__link" href="video.html">Видео</a>
@@ -29,23 +27,23 @@
       <p class="header__hashtag">#TheBatman</p>
       <ul class="header__social social">
         <li class="social__item">
-          <a href="" class="social__link">fbc</a>
+          <a href="" class="social__link social__link_fb"></a>
         </li>
         <li class="social__item">
-          <a href="" class="social__link">tw</a>
+          <a href="" class="social__link social__link_twitter"></a>
         </li>
         <li class="social__item">
-          <a href="" class="social__link">inst</a>
+          <a href="" class="social__link social__link_inst"></a>
         </li>
       </ul>
     </nav>
     <div class="mute">
       <input class="mute__checkbox" type="checkbox" id="mute">
-      <label for="mute" class="mute__label">mute</label>
+      <label for="mute" class="mute__label"></label>
     </div>
   </header>
 
-  <main class="main">
+  <main class="main main__index">
     <img class="logo" src="img/logo.png" alt="Логотип к фильму Бэтмен" width="329" height="235">
   </main>
 
