--- a/photo.html
+++ b/photo.html
@@ -15,13 +15,13 @@
       <button class="navigation__close"></button>
       <ul class="navigation__list">
         <li class="navigation__item">
-          <a class="navigation__link navigation__link_active">Главная</a>
+          <a class="navigation__link" href="index.html">Главная</a>
         </li>
         <li class="navigation__item">
           <a class="navigation__link" href="video.html">Видео</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="photo.html">Фото</a>
+          <a class="navigation__link navigation__link_active" href="#">Фото</a>
         </li>
       </ul>
       <p class="header__hashtag">#TheBatman</p>
