--- a/video.html
+++ b/video.html
@@ -15,10 +15,10 @@
       <button class="navigation__close"></button>
       <ul class="navigation__list">
         <li class="navigation__item">
-          <a class="navigation__link navigation__link_active">Главная</a>
+          <a class="navigation__link" href="index.html">Главная</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="video.html">Видео</a>
+          <a class="navigation__link navigation__link_active" href="#">Видео</a>
         </li>
         <li class="navigation__item">
           <a class="navigation__link" href="photo.html">Фото</a>
