--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Batman</title>
+  <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script defer src="js/script.js"></script>
 </head>
 <body>
   <header class="header">
@@ -44,7 +46,7 @@
       </ul>
     </nav>
     <div class="mute">
-      <input class="mute__checkbox" type="checkbox" id="mute">
+      <input class="mute__checkbox" type="checkbox" id="mute" checked>
       <label for="mute" class="mute__label"></label>
     </div>
   </header>
