--- a/photo.html
+++ b/photo.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Batman</title>
+  <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -47,7 +48,7 @@
       </ul>
     </nav>
     <div class="mute">
-      <input class="mute__checkbox" type="checkbox" id="mute">
+      <input class="mute__checkbox" type="checkbox" id="mute" checked>
       <label for="mute" class="mute__label"></label>
     </div>
   </header>
